--- a/fitness-project/src/styles/Cards.css
+++ b/fitness-project/src/styles/Cards.css
@@ -85,16 +85,23 @@ body {
 }
 
 .info-popup-content {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
   background-color: white;
   padding: 20px 30px;
   border-radius: 8px;
   max-width: 320px;
   text-align: center;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
+  min-height: 150px; 
+  height: 200px;
 }
 
 .close-button {
-  margin-top: 15px;
+  margin-top: auto;
   padding: 8px 14px;
   background-color: #dc3545;
   color: white;
